--- a/nginx-deploy.yaml
+++ b/nginx-deploy.yaml
@@ -2,10 +2,11 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   annotations:
-    deployment.kubernetes.io/revision: "1"
+    deployment.kubernetes.io/revision: “1”
   labels:
     run: nginx-deploy
   name: nginx-deploy
+  namespace : web
 spec:
   replicas: 3
   revisionHistoryLimit: 10
@@ -23,7 +24,8 @@ spec:
         run: nginx
     spec:
       containers:
-      - image: nginx:1.16
-        imagePullPolicy: Always
+      - env:
+        - name: NGINX_PORT
+          value: “80"
+        image: nginx:1.16
         name: nginx
-        
