--- a/NodeportService.yaml
+++ b/NodeportService.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    run: nginx
+    run: nginx-deploy
   name: nginx
 spec:
   ports:
@@ -10,5 +10,5 @@ spec:
     protocol: TCP
     targetPort: 80
   selector:
-    run: nginx
+    run: nginx-deploy
   type: NodePort
