--- a/mynginx-dockerhub.yaml
+++ b/mynginx-dockerhub.yaml
@@ -1,8 +1,9 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: ReplicaSet
 metadata:
   name: mynginx-pod
 spec:
+  replicas : 3
   imagePullSecrets:
   - name: umar
   containers:
