--- a/wordpress-deployment.yaml
+++ b/wordpress-deployment.yaml
@@ -1,24 +1,31 @@
-apiVersion: apps/v1
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  creationTimestamp: null
+  annotations:
+    deployment.kubernetes.io/revision: "1"
+  generation: 1
   labels:
     run: wordpress-deployment
+    app: frontend
   name: wordpress-deployment
+  namespace: default
 spec:
   replicas: 3
   selector:
     matchLabels:
       run: wordpress-deployment
-  strategy: {}
+      app: frontend
+  strategy:
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+    type: RollingUpdate
   template:
     metadata:
-      creationTimestamp: null
       labels:
         run: wordpress-deployment
+        app: frontend
     spec:
       containers:
       - image: wordpress
         name: wordpress-deployment
-        resources: {}
-status: {}
