--- a/wordpress-lb.yaml
+++ b/wordpress-lb.yaml
@@ -1,17 +1,14 @@
 apiVersion: v1
 kind: Service
-metadata:
+metadata: 
   labels:
-    svc: wordpress-deployment
-  name: wordpress-deployment
+    name: lb
+  name: lb 
 spec:
-  selector:
-    app: wordpress-deployment
   ports:
-  - name: http
-    nodePort: 31372
-    port: 8080
+  - port: 80
     protocol: TCP
-    targetPort: 8080
+  selector:
+    app: frontend
+    run: wordpress-deployment
   type: LoadBalancer
-  externalTrafficPolicy: Local
