--- a/nginx-deploy.yaml
+++ b/nginx-deploy.yaml
@@ -21,7 +21,7 @@ spec:
   template:
     metadata:
       labels:
-        run: nginx
+        run: nginx-deploy 
     spec:
       containers:
       - env:
