--- a/nginx-deploy.yaml
+++ b/nginx-deploy.yaml
@@ -12,7 +12,7 @@ spec:
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      run: nginx
+      run: nginx-deploy
   strategy:
     rollingUpdate:
       maxSurge: 25%
